// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the disabled IconButtonToggle matches the snapshot 1`] = `
<button
  aria-label="important toggle"
  aria-pressed={false}
  className="sc-bdVaJa gwTboi"
  disabled={true}
  id="RadioButton2"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-bxivhb kWWPTV"
    focusable="false"
    role="img"
  />
</button>
`;

exports[`the pressed IconButtonToggle matches the snapshot 1`] = `
<button
  aria-label="important toggle"
  aria-pressed={true}
  className="sc-bdVaJa bimAMX"
  disabled={false}
  id="RadioButton2"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-htpNat JvWAC"
    focusable="false"
    role="img"
  />
</button>
`;

exports[`the unpressed IconButtonToggle matches the snapshot 1`] = `
<button
  aria-label="important toggle"
  aria-pressed={false}
  className="sc-bdVaJa gwTboi"
  disabled={false}
  id="RadioButton"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-bwzfXH ebHRBw"
    focusable="false"
    role="img"
  />
</button>
`;
